--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,6 @@ jobs:
         steps:
         - name: Checkout code
           uses: actions/checkout@v2
-        - name: Build project # This would actually build your project, using zip for an example artifact
-          run: |
-            zip --junk-paths dockerized-hapi-${{ github.ref }} README.md
         - name: Create Release
           id: create_release
           uses: actions/create-release@v1
@@ -25,15 +22,5 @@ jobs:
           with:
             tag_name: ${{ github.ref }}
             release_name: Release ${{ github.ref }}
-            draft: true
+            draft: false
             prerelease: true
-        - name: Upload Release Asset
-          id: upload-release-asset 
-          uses: actions/upload-release-asset@v1
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          with:
-            upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-            asset_path: ./dockerized-hapi-${{ github.ref }}.zip
-            asset_name: dockerized-hapi-${{ github.ref }}.zip
-            asset_content_type: application/zip
