feat: build the image in GH actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
         steps:
         - name: Checkout code
           uses: actions/checkout@v2
+        - name: Build Docker Image
+          run: yarn image:build
         - name: Create Release
           id: create_release
           uses: actions/create-release@v1
