fix: env vars reference betwwen windows and nix systems

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         - name: Checkout code
           uses: actions/checkout@v2
         - name: Build Docker Image
-          run: yarn image:build
+          run: yarn image:build-ci
         - name: Create Release
           id: create_release
           uses: actions/create-release@v1
