--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -13,7 +13,8 @@ RUN yarn
 
 COPY --chown=node:node src ./src/
 COPY --chown=node:node .babelrc .
-COPY --chown=node:node .env .
+# Uncomment the below line before using in production (if you need env vars support in code)
+# COPY --chown=node:node .env .
 
 RUN yarn build
 EXPOSE 8080
