--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
           uses: actions/checkout@v2
         - name: Build Docker Image
           run: yarn image:build-ci
+        - name: Run Container
+          run: yarn container:run-ci          
         - name: Create Release
           id: create_release
           uses: actions/create-release@v1
