--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
         steps:
         - name: Checkout code
           uses: actions/checkout@v2
+        - name: Pre-build
+          run: cat .sample-env >> .env 
         - name: Build Docker Image
           run: yarn image:build-ci
         - name: Run Container
