--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,18 +24,18 @@ jobs:
         run: yarn install
       - name: Run Tests
         run: yarn test
-    release:
-      name: Release
-      runs-on: ubuntu-latest
-      needs: build
-      steps:
-        - name: Create Release
-          id: create_release
-          uses: actions/create-release@v1
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-          with:
-            tag_name: ${{ github.ref }}
-            release_name: Release ${{ github.ref }}
-            draft: false
-            prerelease: true
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: true
+      - name: Attach Test Coverage
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage-report
+          path: ./coverage.html
