--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@hapi/code": "^8.0.1",
-    "@hapi/lab": "^22.0.4"
+    "@hapi/lab": "^22.0.4",
+    "prettier": "2.0.5"
   }
 }
