fix: added 'test' folder to linting

--- a/package.json
+++ b/package.json
@@ -55,6 +55,10 @@
     "src/**.js": [
       "eslint --fix-dry-run",
       "prettier --write"
+    ],
+    "test/**.js": [
+      "eslint --fix-dry-run",
+      "prettier --write"
     ]
   }
 }
