--- a/package.json
+++ b/package.json
@@ -53,12 +53,13 @@
   },
   "lint-staged": {
     "src/**.js": [
-      "eslint --fix-dry-run",
-      "prettier --write"
+      "prettier --write",
+      "eslint --fix-dry-run"
+
     ],
     "test/**.js": [
-      "eslint --fix-dry-run",
-      "prettier --write"
+      "prettier --write",
+      "eslint --fix-dry-run"
     ]
   }
 }
