--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@hapi/code": "^8.0.1",
     "@hapi/eslint-plugin-hapi": "^4.3.5",
     "@hapi/lab": "^22.0.4",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.3.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
@@ -52,14 +53,9 @@
     }
   },
   "lint-staged": {
-    "src/**.js": [
-      "prettier --write",
-      "eslint --fix-dry-run"
-
-    ],
-    "test/**.js": [
-      "prettier --write",
-      "eslint --fix-dry-run"
+    "{src,lib}/**/*.js": [
+      "eslint --fix-dry-run",
+      "prettier --write"
     ]
   }
 }
