--- a/package.json
+++ b/package.json
@@ -53,7 +53,11 @@
     }
   },
   "lint-staged": {
-    "{src,lib}/**/*.js": [
+    "src/**/*.js": [
+      "eslint --fix-dry-run",
+      "prettier --write"
+    ],
+    "lib/**/*.js": [
       "eslint --fix-dry-run",
       "prettier --write"
     ]
