--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
       "eslint --fix-dry-run",
       "prettier --write"
     ],
-    "lib/**/*.js": [
+    "lib/**/*.test.js": [
       "eslint --fix-dry-run",
       "prettier --write"
     ]
