--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
   "lint-staged": {
     "src/**/*.js": [
       "eslint --fix-dry-run",
-      "prettier --write"
+      "prettier --write ."
     ],
     "lib/**/*.test.js": [
       "eslint --fix-dry-run",
-      "prettier --write"
+      "prettier --loglevel debug --write ."
     ]
   }
 }
