--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,5 +44,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./coverage.html
-          asset_name: coverage-report
+          asset_name: test-report.html
           asset_content_type: text/html
